# CIEL

./: .eleventyignore  .gitignore  README.md  demo.html  demo.md  eleventy.config.js  package-lock.json  package.json
.github/workflows/: on-spell-check.yml
CIEL1/Algorithme et structure de données en Python/: python_advanced_data_structures.md  python_data_structures.html  python_data_structures.md  python_introduction.html  python_introduction.md  python_oop.html  python_oop.md
CIEL1/Algorithme et structure de données en Python/Assessments/: python_eval_ecrite_B.aux
CIEL1/Manipuler l'environnement avec Python/: python_exceptions.html  python_exceptions.md  python_file_management.html  python_file_management.md  tap&water.drawio
CIEL1/Manipuler l'environnement avec Python/TDs/: python_exceptions.ipynb
CIEL1/Manipuler l'environnement avec Python/TPs/AntivirusPart2ClamAV/: README.md  TODO.md  pyproject.toml
CIEL2/C/: c_introduction.html  c_introduction.md  c_memory.html  c_memory.md  c_pointer.md
CIEL2/C++/: c++_raii.html  lvgl_introduction.html
CIEL2/Cybersecurity/: rss.md
CIEL2/Programmation temps réel/: TODO.md  cityval.html  free_rtos_introduction.html  free_rtos_introduction.md  free_rtos_queue.html  free_rtos_task.html  free_rtos_task.md
CIEL2/Programmation temps réel/TP/: m5stack_core2_setup.md
_site/: index.html
eleventy/: index.njk
eleventy/_data/: attachments.json
eleventy/_includes/: base.njk
scripts/: openai_grammar.py  publish.py  requirements.txt
src/CIEL1/: .metadata.md
src/CIEL1/Python/: .metadata.md  (+8 more)
(+170 files in other folders)
