[project]
name = "antiviruspart1"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cvdupdate (>=1.1.2,<2.0.0)"
]

[tool.poetry]
package-mode = false
packages = [{include = "antiviruspart1", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
